# Design-Patterns

./: .gitignore  README.md
AbstractFactory/: CMakeLists.txt
AbstractFactory/include/: AbstractFactory.h
AbstractFactory/src/: AbstractFactory.cc
AbstractFactory/tests/: CMakeLists.txt  abstract_factory_test.cc
Adapter/: CMakeLists.txt
Adapter/include/: Adapter.h
Adapter/src/: Adapter.cc
Adapter/tests/: CMakeLists.txt  adapter_test.cc
Bridge/: CMakeLists.txt
Bridge/include/: Bridge.h
Bridge/src/: Bridge.cc
Bridge/tests/: CMakeLists.txt  bridge_test.cc
Builder/: CMakeLists.txt
Builder/include/: Builder.h
Builder/src/: Builder.cc
Builder/tests/: CMakeLists.txt  builder_test.cc
Composite/: CMakeLists.txt
Composite/include/: Composite.h  CompositeRowColumn.h
Composite/src/: Composite.cc  CompositeRowColumn.cc
Composite/tests/: CMakeLists.txt  composite_test.cc
Decorator/: CMakeLists.txt
Decorator/include/: Decorator.h  EncodingDecodingDecorator.h
Decorator/src/: Decorator.cc  EncodingDecodingDecorator.cc
Decorator/tests/: CMakeLists.txt  decorator_test.cc
Docs/: Design Patterns.docx
Facade/: CMakeLists.txt
Facade/include/: Facade.h
Facade/src/: Facade.cc
Facade/tests/: CMakeLists.txt  facade_test.cc
FactoryMethod/: CMakeLists.txt
FactoryMethod/include/: FactoryMethod.h  FactoryMethodApplication.h
FactoryMethod/src/: FactoryMethod.cc  FactoryMethodApplication.cc
Flyweight/: CMakeLists.txt
ObjectPool/: CMakeLists.txt
Prototype/: CMakeLists.txt
Proxy/: CMakeLists.txt
Singleton/: CMakeLists.txt
(+24 files in other folders)
